name:                miso
version:             0.1.0.0
author:              David Johnson
maintainer:          djohnson.m@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: Miso
  ghc-options: -Wall -Werror
  hs-source-dirs: src
  build-depends:   aeson
                 , base
                 , bytestring
                 , containers
                 , elerea
                 , free
                 , ghcjs-base
                 , ghcjs-dom
                 , hashtables
                 , lens
                 , lucid
                 , miso-html
                 , mtl
                 , scientific
                 , string-conversions
                 , text
                 , transformers
                 , unordered-containers
                 , vector
  default-language:    Haskell2010
