name:                miso
version:             0.1.0.0
category:            Web, Miso, Data Structures
license:             BSD3
license-file:        LICENSE
author:              David M. Johnson <djohnson.m@gmail.com>
maintainer:          David M. Johnson <djohnson.m@gmail.com>
homepage:            http://github.com/miso-haskell/miso
copyright:           Copyright (c) 2016 David M. Johnson
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.22
description:
            .
            <<http://tinyurl.com/hrfpjjy>>
            .
            Type-safe virtual DOM construction library, meant as a companion library for the @miso@ package
            .
             <http://hackage.haskell.org/package/miso>
            .

executable main
  if !impl(ghcjs)
    buildable: False
  main-is: Main.hs
  hs-source-dirs: exe
  ghc-options: -Wall
  build-depends: miso, ghcjs-base, base
  default-language: Haskell2010

library
  exposed-modules:
    Miso.Html
    Miso.Html.Attr
    Miso.Html.CSS
    Miso.Html.Combinator
    Miso.Html.Event
    Miso.Html.Types.Event
    Miso.Html.Internal
    Miso.Html.String
    Miso.Html.Property
    Miso.Html.Types
    Miso.Svg
    Miso.Svg.Combinator
  ghc-options: -Wall
  hs-source-dirs: src
  build-depends:   aeson
                 , base > 4.7 && < 5.0
                 , bytestring
                 , containers
                 , free
                 , text
  if impl(ghcjs)
    hs-source-dirs: ghcjs-src
    build-depends: ghcjs-base, elerea, ghcjs-dom == 0.2.3.1
    js-sources:
      jsbits/diff.js
      jsbits/delegate.js
      jsbits/isomorphic.js
    exposed-modules:
      Miso
      Miso.Effect
      Miso.Event
      Miso.Event.Delegate
      Miso.Event.Interpreter
      Miso.Html.Diff
      Miso.Isomorphic
      Miso.Observable
      -- Miso.Router
      Miso.Settings
      Miso.Signal
      Miso.Storage
      Miso.TypeLevel
      Miso.Types
    other-modules:
      Miso.Concurrent
  else
    build-depends: lucid
                 , vector
    hs-source-dirs: ghc-src
    exposed-modules:  Miso.Event
  default-language: Haskell2010

source-repository head
   type: git
   location: https://github.com/miso-haskell/miso.git
