name:                app-jsaddle
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app-jsaddle
  main-is:
    Main.hs
  build-depends:
    base, miso
  if !impl(ghcjs)
    build-depends:
       jsaddle, jsaddle-warp, transformers, warp, websockets
  default-language:
     Haskell2010
