name:                app-jsaddle
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app-jsaddle
  main-is:
    Main.hs
  build-depends:
    base, miso
  if arch(wasm32)
    ghc-options:
      -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"
  default-language:
     Haskell2010
