cabal-version: 2.2
name: app
version: 0.1.0.0
synopsis: Sample miso app
category: Web

flag interactive
  default:
    False
  manual:
    True
  description:
   Enable features for interactive use (e.g., in GHCi)

common options
  if arch(wasm32)
    ghc-options:
      -no-hs-main
      -optl-mexec-model=reactor
      "-optl-Wl,--export=hs_start"
    cpp-options:
      -DWASM

    if flag(interactive)
      cpp-options:
        -DINTERACTIVE

  if arch(javascript)
     ld-options:
       -sEXPORTED_RUNTIME_METHODS=HEAP8

     if os(darwin) || os(osx)
       ld-options:
         -sWASM=0

  -- Native (non-wasm/non-js) GHC hits a StaticPointers SPT link error at -O
  -- (undefined reference to 'r..._closure' in Main_init__spt). Building this
  -- module at -O0 avoids it; WASM/JS, the primary targets, keep full -O.
  if !arch(wasm32) && !arch(javascript)
    ghc-options:
      -O0

executable app
  import:
    options
  main-is:
    Main.hs
  build-depends:
    base, miso
  default-language:
    Haskell2010
