cabal-version:      2.2
name:               miso-tests
version:            0.1.0.0
synopsis:           Integration tests for Haskell miso Components
description:        An hspec-like library for testing miso Components w/ jsaddle
homepage:           https://haskell-miso.org
license:            BSD-3-Clause
license-file:       LICENSE
author:             dmjio
maintainer:         code@dmj.io
copyright:          dmjio @ 2026
category:           Web
build-type:         Simple

common warnings
  ghc-options: -Wall

common options
  if arch(wasm32)
    ghc-options:
      -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"
    cpp-options:
      -DWASM

  if arch(javascript)
     ld-options:
       -sEXPORTED_RUNTIME_METHODS=HEAP8

flag jsdom
  manual:
    True
  default:
    False
  description:
    Uses to indicate if jsdom should be used

executable component-tests
  import:
    warnings,
    options

  if impl(ghcjs) || arch(javascript) || arch(wasm32)
    buildable: True
  else
    buildable: False

  main-is:
    Main.hs
  build-depends:
    base, miso, miso-tests, containers, mtl, jsaddle, stm
  hs-source-dirs:
    app

  if flag (jsdom)
    js-sources:
      js/jsdom.js
    cpp-options:
      -djsdom
  else
    cpp-options:
      -dghcjs_browser

  default-language:
    Haskell2010

executable integration-tests-client
  import:
    warnings,
    options

  if impl(ghcjs) || arch(javascript) || arch(wasm32)
    buildable: True
  else
    buildable: False

  hs-source-dirs:
    app

  build-depends:
    base,
    text,
    aeson,
    miso,
    QuickCheck,
    hashable,
    jsaddle,
    lens

  main-is:
    TestClient.hs

  other-modules:    
    TestApp
    HtmlGen

  default-language:
    Haskell2010

executable integration-tests-server
  import:
    warnings

  if impl(ghcjs) || arch(javascript) || arch(wasm32)
    buildable: False
  else
    buildable: True

  main-is:
    TestServer.hs

  other-modules:    
    TestApp
    HtmlGen

  build-depends:
    base,
    text,
    aeson,
    miso,
    warp,
    wai-extra,
    wai,
    servant,
    servant-server,
    servant-miso-router,
    servant-miso-html,
    directory,
    QuickCheck,
    hashable,
    http-client,
    http-types,
    bytestring
  hs-source-dirs:
    app
  default-language:
    Haskell2010

library
  import:
    warnings
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  exposed-modules:
    Miso.Test
  build-depends:
    base, miso, containers, mtl, jsaddle, stm
