name:                mario
version:             0.1.0.0
synopsis:            Mario example
category:            Web
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  index.html
  imgs/mario.png

executable mario
  main-is:
    Main.hs
  build-depends:
    base < 5,
    containers,
    miso
  default-language:
    Haskell2010
