cabal-version:       2.2
name:                sse
version:             0.1.0.0
synopsis:            Server sent events example
homepage:            https://sse.haskell-miso.org
license:             BSD-3-Clause
license-file:        LICENSE
author:              David Johnson
maintainer:          code@dmj.io
copyright:           David Johnson (c) 2016-2025
category:            Web
build-type:          Simple

common server-only
  if impl(ghcjs) || arch(javascript) || arch(wasm32)
    buildable: False

common client-only
  if impl(ghcjs) || arch(javascript) || arch(wasm32)
    buildable: True
  else
    buildable: False

common common-modules
  other-modules:
     Common

executable server
  import:
    server-only, common-modules
  main-is:
    Main.hs
  ghc-options:
    -O2 -threaded -Wall -rtsopts
  hs-source-dirs:
    server, shared
  build-depends:
    aeson,
    base < 5,
    binary,
    containers,
    http-types,
    miso,
    mtl,
    network-uri,
    servant,
    servant-server,
    time,
    wai,
    wai-extra,
    warp
  default-language:
    Haskell2010

executable client
  import:
    client-only, common-modules
  main-is:
    Main.hs
  hs-source-dirs:
    client, shared
  build-depends:
    aeson,
    base < 5,
    containers,
    network-uri,
    miso,
    servant
  default-language:
    Haskell2010
